# LibRaw

./: .gitignore  CMakeLists.txt  Makefile.dist  README.md  SAMPLES.md  build_linux.sh  build_macos.sh  build_windows.bat
.github/workflows/: release.yml
cmake/: LibRawConfig.cmake.in
internal/: libraw_safe_math.h
libraw/: libraw_version.h
samples/: batch_verify.cpp
src/decoders/: crx.cpp  decoders_dcraw.cpp  load_mfbacks.cpp  sonycc.cpp
src/metadata/: kodak.cpp
src/postprocessing/: aspect_ratio.cpp  mem_image.cpp  postprocessing_aux.cpp  postprocessing_utils.cpp
src/preprocessing/: subtract_black.cpp
src/utils/: curves.cpp  thumb_utils.cpp
tests/: CMakeLists.txt  test_pipeline_consistency.cpp  test_security_fixes.cpp
